fix page break in print view

--- a/frontend/src/app/components/ser-detail/ser-detail.component.scss
+++ b/frontend/src/app/components/ser-detail/ser-detail.component.scss
@@ -17,7 +17,7 @@
 
   &--page-break {
     /* Force page breaks after */
-    page-break-before: always;
+    page-break-after: always;
   }
 
   &--portrait {
